# low-resource-nlp-toolkit

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  language_or_dataset_request.yml
.github/workflows/: docs.yml  publish.yml  tests.yml
docs/: adoption.md  data_statement_template.md  index.md  model_card_template.md  novelty_review.md  release_notes_v0_1.md  release_notes_v0_2.md  release_plan_v0_1.md  release_plan_v0_2.md  roadmap.md  scope.md
examples/: audit_code_switching.py  route_texts.py  sample_texts.jsonl
scripts/: quality_gate.py
src/low_resource_nlp/: __init__.py  _version.py  audit.py  cli.py  datasets.py  evaluation.py  labels.py  normalisation.py  routing.py
tests/: test_audit.py  test_cli.py  test_datasets.py  test_evaluation.py  test_labels.py  test_normalisation.py  test_routing.py
