[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "low-resource-nlp-toolkit"
version = "0.1.0"
description = "A robust Python toolkit for low-resource African language pre-processing, emotion labels, evaluation, and routing."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Oyinkansola Onwuchekwa" }
]
keywords = [
  "low-resource-nlp",
  "african-languages",
  "multilingual-nlp",
  "emotion-recognition",
  "language-routing",
  "responsible-ai"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Text Processing :: Linguistic"
]
dependencies = []

[project.optional-dependencies]
models = [
  "numpy",
  "scikit-learn",
  "sentence-transformers",
  "transformers"
]
dev = [
  "pytest",
  "ruff"
]
build = [
  "build",
  "twine"
]
docs = [
  "mkdocs>=1.6"
]

[project.urls]
Homepage = "https://github.com/oyinkanchekwas/low-resource-nlp-toolkit"
Documentation = "https://github.com/oyinkanchekwas/low-resource-nlp-toolkit/tree/main/docs"
Changelog = "https://github.com/oyinkanchekwas/low-resource-nlp-toolkit/blob/main/CHANGELOG.md"
Issues = "https://github.com/oyinkanchekwas/low-resource-nlp-toolkit/issues"

[project.scripts]
low-resource-nlp = "low_resource_nlp.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"
